# lazy-motd

./: Cargo.toml  README.md
examples/: demo.rs  domo.rs
src/: env.rs  lib.rs  pkg.rs
