[package]
name = "lazy-motd"
version = "1.0.8"
edition = "2024"
description = "The perfect MOTD for the elegantly lazy developer. Maximum style, minimal effort."
license = "MIT"
repository = "https://github.com/canmi21/lazy-motd"
readme = "README.md"
keywords = ["motd", "cli", "terminal", "system-info", "rust"]
categories = ["command-line-utilities"]

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[[example]]
name = "demo"
path = "examples/demo.rs"

[dependencies]
chrono = "0.4"
machine-uid = "0.5"
sysinfo = "0.37"
termcolor = "1"